--- a/src/formmailer/formmailer.csproj
+++ b/src/formmailer/formmailer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
