--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -29,7 +29,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name tbwebsitegen4 --overwrite --auth-mode key -d '$web' -s .
+            az storage blob upload-batch --account-name tbwebsitegen4 --overwrite --auth-mode key -d '$web' -s ./src
             
 #      - name: Purge CDN endpoint
 #        uses: azure/CLI@v1
